--- a/www/routes/views/dashboard.pug
+++ b/www/routes/views/dashboard.pug
@@ -28,13 +28,18 @@ html
                         li.nav-item.dropdown
                             a.nav-link.dropdown-toggle(href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false") Admin
                             ul.dropdown-menu
-                                li.dropdown-item(href="#") Link
-                                li.dropdown-item(href="#") Link
-                                li.dropdown-item(href="#") Link
-                                li.dropdown-item(href="#") Link
+                                li
+                                    a.dropdown-item(href="#Schema" style="cursor: pointer;") Schema
+                                li
+                                    a.dropdown-item(href="#" style="cursor: pointer;") Link
+                                li
+                                    a.dropdown-item(href="#" style="cursor: pointer;") Link
+                                li
+                                    a.dropdown-item(href="#" style="cursor: pointer;") Link
                                 li
                                     hr.dropdown-divider
-                                li.dropdown-item(href="#") Link
+                                li
+                                    a.dropdown-item(href="#" style="cursor: pointer;") Link
                         li.nav-item
                             a.nav-link.text-danger.active(href="/login/logout") Log Out
 
