--- a/www/routes/views/schema.pug
+++ b/www/routes/views/schema.pug
@@ -1,6 +1,6 @@
 html
     head 
-        title=title + " | Dashboard"
+        title=title + " | Schema"
         link(rel="icon", href=image_url)
         link(rel="stylesheet", href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css")
         script(src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js") 
@@ -18,29 +18,28 @@ html
                 div.collapse.navbar-collapse#cmsNav
                     ul.navbar-nav
                         li.nav-item
-                            a.nav-link.active(aria-current="page" href="/") Dashboard
+                            a.nav-link(href="/dashboard") Dashboard
                         li.nav-item
                             a.nav-link(href="#") Link
                         li.nav-item
                             a.nav-link(href="#") Link
                         li.nav-item
                             a.nav-link(href="#") Link
-                        if admin == true
-                            li.nav-item.dropdown
-                                a.nav-link.dropdown-toggle(href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false") Admin
-                                ul.dropdown-menu
-                                    li
-                                        a.dropdown-item(href="/admin/schema" style="cursor: pointer;") Schema
-                                    li
-                                        a.dropdown-item(href="#" style="cursor: pointer;") Link
-                                    li
-                                        a.dropdown-item(href="#" style="cursor: pointer;") Link
-                                    li
-                                        a.dropdown-item(href="#" style="cursor: pointer;") Link
-                                    li
-                                        hr.dropdown-divider
-                                    li
-                                        a.dropdown-item(href="#" style="cursor: pointer;") Link
+                        li.nav-item.dropdown
+                            a.nav-link.dropdown-toggle.active(href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false") Admin
+                            ul.dropdown-menu
+                                li
+                                    a.dropdown-item.active(href="/admin/schema" aria-current="page" style="cursor: pointer;") Schema
+                                li
+                                    a.dropdown-item(href="#" style="cursor: pointer;") Link
+                                li
+                                    a.dropdown-item(href="#" style="cursor: pointer;") Link
+                                li
+                                    a.dropdown-item(href="#" style="cursor: pointer;") Link
+                                li
+                                    hr.dropdown-divider
+                                li
+                                    a.dropdown-item(href="#" style="cursor: pointer;") Link
                         li.nav-item
                             a.nav-link.text-danger.active(href="/login/logout") Log Out
 
