--- a/www/routes/views/dashboard.pug
+++ b/www/routes/views/dashboard.pug
@@ -32,7 +32,7 @@ html
                                     li
                                         a.dropdown-item(href="/admin/schema" style="cursor: pointer;") Schema
                                     li
-                                        a.dropdown-item(href="#" style="cursor: pointer;") Link
+                                        a.dropdown-item(href="/admin/create-category" style="cursor: pointer;") Create Category
                                     li
                                         a.dropdown-item(href="#" style="cursor: pointer;") Link
                                     li
