finished v1 of category creation page UI -> Still need to move JS

--- a/www/public/css/styles.css
+++ b/www/public/css/styles.css
@@ -100,10 +100,10 @@ body {
     background-color: rgb(170, 170, 170);
 }
 
-#ReferenceList {
-    display: none;
+#NewCategoryForm {
+    padding: 10px !important;
 }
 
-#SecondaryReferenceList {
-    display: none;
+#AddAttributeButton {
+    margin: 1rem;
 }
