--- a/www/routes/views/dashboard.pug
+++ b/www/routes/views/dashboard.pug
@@ -34,7 +34,7 @@ html
                                     li
                                         a.dropdown-item(href="/admin/create-category" style="cursor: pointer;") Create Category
                                     li
-                                        a.dropdown-item(href="#" style="cursor: pointer;") Link
+                                        a.dropdown-item(href="/admin/api-keys" style="cursor: pointer;") API Keys
                                     li
                                         a.dropdown-item(href="#" style="cursor: pointer;") Link
                                     li
